--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
         <script type="text/javascript" src="static/start.js"></script> <!-- starts the scripts when joycons are connected -->
     </head>
 
-    <body>	
-	<div id=container style="margin:auto;text-align:center;">
+    <body style="background-color:black;">	
+	<div id=container style="margin:auto;text-align:center;background-color:black">
 	    <a> <!-- Using an image object instead of WebRTC since the switch browser does not support this. 
 		     This produces a ~3x stretched out image to fill the screen. Keeping the aspect ratio. -->
         	<img src="static/placeholder.jpg" style="width:1280px;height:720px;" id="image" class="center"/>  
@@ -19,7 +19,7 @@
 	
         <script type="text/javascript"> // script that actually toggles the fullscreen script 
             document.getElementById('container').onclick = function () {
-                document.getElementById("image").src="static/img.jpg";
+                document.getElementById("image").src="static/img.jpg?t=" + new Date().getTime();;
 		fullscreen();
                 };	
 	</script> 
