--- a/templates/index_15fps.html
+++ b/templates/index_15fps.html
@@ -5,7 +5,7 @@
         <title>Mariko DOOM</title>
         <script type="text/javascript" src="static/jquery-3.4.1.min.js"></script>
         <script type="text/javascript" src="static/fullscreen.js"></script> <!-- script that handles switching to fullscreen -->
-        <script type="text/javascript" src="static/joycon_15fps.js"></script> <!-- handles joycon input, updates frames -->
+        <script type="text/javascript" src="static/joycon.js" frameskip=4></script> <!-- handles joycon input, updates frames -->
         <script type="text/javascript" src="static/start.js"></script> <!-- starts the scripts when joycons are connected -->
     </head>
 
@@ -16,7 +16,7 @@
         	<img src="static/placeholder.jpg" style="width:1280px;height:720px;" id="image" class="center"/>  
 	    </a>
 	</div>
-	
+
         <script type="text/javascript"> // script that actually toggles the fullscreen script 
             document.getElementById('container').onclick = function () {
                 document.getElementById("image").src="static/img.jpg?t=" + new Date().getTime();;
