--- a/templates/index_20fps.html
+++ b/templates/index_20fps.html
@@ -3,6 +3,7 @@
 
     <head>
         <title>Mariko DOOM</title>
+        <link rel="stylesheet" type="text/css" href="static/style.css">
         <script type="text/javascript" src="static/jquery-3.4.1.min.js"></script>
         <script type="text/javascript" src="static/fullscreen.js"></script> <!-- script that handles switching to fullscreen -->
         <script type="text/javascript" src="static/joycon.js" frameskip=3></script> <!-- handles joycon input, updates frames -->
